5.24--有未知bug，游戏棋盘界面无法打开